--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,102 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<!--The content below is only a placeholder and can be replaced.
 <div style="text-align:center">app-root is empty for moment</div>
+-->
+<h1>Hot Weather Widget</h1>
+<div class="element">
+		<div class="element-left">
+			<div class="element-bg-img"><img src="images/1.jpg" alt="" class="img-responsive"> </div>
+			<div class="element-left-bottom">
+				<div class="ele-strip">
+					<ul>
+						<li><a href="#">Hotel</a></li>
+						<li><a href="#">Fishing</a></li>
+						<li><a href="#">Tours</a></li>
+						<li class="anc-bor"><a href="#">Weather</a></li>
+					</ul>
+				</div>
+				<div class="village">
+					<h3>Righteous indignation & like</h3>
+					 <span class="line"> </span>
+						 <div class="activity_box">
+			        <div class="scrollbar" id="style-2">
+	                   <div class="activity-row">
+		                 <div class="activity-desc">
+		                 	<h5>Resort Address</h5>
+		                    <p>Sed perspiciatis</p>
+		                    <p>Et harum quidem</p>
+		                   <h6>Tel:+1285 968 685</h6>
+		                 </div>
+		                 <div class="activity-img">
+		                   <ul>
+		                 	<li><img src='images/res.jpg'  alt=""/></li>
+		                 	<li><img src='images/r1.jpg'  alt=""/></li>
+		                 	</ul>
+		                 	</div>
+		                 <div class="clear"> </div>
+	                    </div>
+		  			    <div class="activity-row">
+		                <div class="activity-desc">
+		                 	<h5>Resort Address</h5>
+		                    <p>Sed ut perspiciatis</p>
+		                    <p>Et harum quidem</p>
+		                    <h6>Tel:+1285 968 685</h6>
+		                 </div>
+		                 <div class="activity-img">
+		                   <ul>
+		                 	<li><img src='images/res.jpg'  alt=""/></li>
+		                 	<li><img src='images/r1.jpg'  alt=""/></li>
+		                 	</ul>
+		                 	</div>
+		                 <div class="clear"> </div>
+	                    </div>
+	                    <div class="activity-row">
+		                <div class="activity-desc">
+		                 	<h5>Resort Address</h5>
+		                    <p>Sed ut perspiciatis</p>
+		                    <p>Et harum quidem</p>
+		                   <h6>Tel:+1285 968 685</h6>
+		                 </div>
+		                 <div class="activity-img">
+		                   <ul>
+		                 	<li><img src='images/res.jpg'  alt=""/></li>
+		                 	<li><img src='images/r1.jpg'  alt=""/></li>
+		                 	</ul>
+		                 	</div>
+		                 <div class="clear"> </div>
+	                    </div>
+		  		        </div>
+		          </div>
+			   </div>
+		</div>
+	   </div>
+		<div class="element-right">
+			<div class="temperatur">
+				<h5>Et harum quidem</h5>
+				<span class="w-line"> </span>
+				<span class="cloud"> </span>
+				<h2>14<sup class="degree">°</sup></h2>
+				<h6>Water 20<sup class="degree">°</sup></h6>
+			</div>
+			<div class="teddy-bear">
+				<div class="teddy-text">
+					<h4>Nam libero voluptatem</h4>
+					<span class="w-line"> </span>
+					<img src="images/b1.jpg" alt=""  class="img-responsive">
+			    </div>
+			    <div class="teddy-follow">
+			    	<ul>
+			    		<li class="folw-h"><h3>2850</h3>
+			    			<p>Followers</p>
+			    		</li>
+			    		<li><h3>675</h3>
+			    			<p>Following</p>
+			    		</li>
+			    	</ul>
+			    </div>
+			</div>
+		</div>
+	  <div class="clear"> </div>
+</div>
+<div class="copy-right">
+			<p>© 2015 Hot Weather Widget. All rights reserved | Design by  <a href="http://w3layouts.com/" target="_blank">  W3layouts </a></p>
+</div>
