--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,24 +20,26 @@
           <div class="activity_box">
             <div class="scrollbar" id="style-2">
               
-              <div class="activity-row" *ngFor="let a of activitiesList">
-                <div class="activity-desc">
-                  <h5>Resort Address</h5>
-                  <p>{{a.address1}}</p>
-                  <p>{{a.address2}}</p>
-                  <h6>{{a.phone}}</h6>
+              <div *ngIf="activitiesList$ | async as activitiesList">
+                <div class="activity-row" *ngFor="let a of activitiesList">
+                  <div class="activity-desc">
+                    <h5>Resort Address</h5>
+                    <p>{{a.address1}}</p>
+                    <p>{{a.address2}}</p>
+                    <h6>{{a.phone}}</h6>
+                  </div>
+                  <div class="activity-img">
+                    <ul>
+                      <li>
+                        <img src='images/res.jpg' alt="" />
+                      </li>
+                      <li>
+                        <img src='images/r1.jpg' alt="" />
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="clear"></div>
                 </div>
-                <div class="activity-img">
-                  <ul>
-                    <li>
-                      <img src='images/res.jpg' alt="" />
-                    </li>
-                    <li>
-                      <img src='images/r1.jpg' alt="" />
-                    </li>
-                  </ul>
-                </div>
-                <div class="clear"></div>
               </div>
 
             </div>
