--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
             <div class="scrollbar" id="style-2">
               
               <div *ngIf="activitiesList$ | async as activitiesList">
-                <div class="activity-row" *ngFor="let a of activitiesList">
+                <div (click)="hotelClick(a.address1)" class="activity-row" *ngFor="let a of activitiesList">
                   <div class="activity-desc">
                     <h5>Resort Address</h5>
                     <p>{{a.address1}}</p>
