Создал пайп activityFilter для фильтрации (ng generate pipe activityFilter)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,10 +8,10 @@
 			<div class="element-left-bottom">
 				<div class="ele-strip">
 					<ul>
-						<li><a href="#">Hotel</a></li>
-						<li><a href="#">Fishing</a></li>
-						<li><a href="#">Tours</a></li>
-						<li class="anc-bor"><a href="#">Weather</a></li>
+						<li><a href="#" (click)="criteriaClicked('Hotel')">Hotel</a></li>
+						<li><a href="#" (click)="criteriaClicked('Fishing')">Fishing</a></li>
+						<li><a href="#" (click)="criteriaClicked('Tours')">Tours</a></li>
+						<li class="anc-bor"><a href="#" (click)="criteriaClicked('Weather')">Weather</a></li>
 					</ul>
 				</div>
         <div class="village">
