Сделал изменение данных в виджете погоды при клике на отель. Теперь надо этот виджет вынести в отдельный компонент

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,8 +53,8 @@
 				<h5>Et harum quidem</h5>
 				<span class="w-line"> </span>
 				<span class="cloud"> </span>
-				<h2>14<sup class="degree">°</sup></h2>
-				<h6>Water 20<sup class="degree">°</sup></h6>
+        <h2>{{currentAirTemp}}<sup class="degree">°</sup></h2>
+        <h6>Water {{currentWaterTemp}}<sup class="degree">°</sup></h6>
 			</div>
 			<div class="teddy-bear">
 				<div class="teddy-text">
