Сделал байндинг свойств родительского компонента к свойствам дочернего temperature-widget (сам байндинг в этой строке: [airTemp]="currentAirTemp" [waterTemp]="currentWaterTemp")

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,13 +49,7 @@
 		</div>
 	   </div>
 		<div class="element-right">
-			<div class="temperatur">
-				<h5>Et harum quidem</h5>
-				<span class="w-line"> </span>
-				<span class="cloud"> </span>
-        <h2>{{currentAirTemp}}<sup class="degree">°</sup></h2>
-        <h6>Water {{currentWaterTemp}}<sup class="degree">°</sup></h6>
-			</div>
+      <app-temperature-widget [airTemp]="currentAirTemp" [waterTemp]="currentWaterTemp"></app-temperature-widget>
 			<div class="teddy-bear">
 				<div class="teddy-text">
 					<h4>Nam libero voluptatem</h4>
