--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,23 +50,7 @@
 	   </div>
 		<div class="element-right">
       <app-temperature-widget [airTemp]="currentAirTemp" [waterTemp]="currentWaterTemp"></app-temperature-widget>
-			<div class="teddy-bear">
-				<div class="teddy-text">
-					<h4>Nam libero voluptatem</h4>
-					<span class="w-line"> </span>
-					<img src="images/b1.jpg" alt=""  class="img-responsive">
-			    </div>
-			    <div class="teddy-follow">
-			    	<ul>
-			    		<li class="folw-h"><h3>2850</h3>
-			    			<p>Followers</p>
-			    		</li>
-			    		<li><h3>675</h3>
-			    			<p>Following</p>
-			    		</li>
-			    	</ul>
-			    </div>
-			</div>
+      <app-social-widget [followers]="currentFollowers" [following]="currentFollowing"></app-social-widget>
 		</div>
 	  <div class="clear"> </div>
 </div>
