--- a/src/app/social-widget/social-widget.component.html
+++ b/src/app/social-widget/social-widget.component.html
@@ -1,3 +1,17 @@
-<p>
-  social-widget works!
-</p>
+<div class="teddy-bear">
+  <div class="teddy-text">
+    <h4>Nam libero voluptatem</h4>
+    <span class="w-line"> </span>
+    <img src="images/b1.jpg" alt=""  class="img-responsive">
+    </div>
+    <div class="teddy-follow">
+      <ul>
+        <li class="folw-h"><h3>{{followers}}</h3>
+          <p>Followers</p>
+        </li>
+        <li><h3>{{following}}</h3>
+          <p>Following</p>
+        </li>
+      </ul>
+    </div>
+</div>
