--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,18 +3,18 @@
 -->
 <h1>Hot Weather Widget</h1>
 <div class="element">
-		<div class="element-left">
-			<div class="element-bg-img"><img src="images/1.jpg" alt="" class="img-responsive"> </div>
-			<div class="element-left-bottom">
-				<div class="ele-strip">
-					<ul>
-						<li><a href="#" (click)="criteriaClicked('Hotel')">Hotel</a></li>
-						<li><a href="#" (click)="criteriaClicked('Fishing')">Fishing</a></li>
-						<li><a href="#" (click)="criteriaClicked('Tours')">Tours</a></li>
-						<li><a href="#" (click)="criteriaClicked('')">All</a></li>
-						<li class="anc-bor"><a href="#" (click)="criteriaClicked('Weather')">Weather</a></li>
-					</ul>
-				</div>
+    <div class="element-left">
+      <div class="element-bg-img"><img src="images/1.jpg" alt="" class="img-responsive"> </div>
+      <div class="element-left-bottom">
+        <div class="ele-strip">
+          <ul>
+            <li><a href="#" (click)="criteriaClicked('Hotel')">Hotel</a></li>
+            <li><a href="#" (click)="criteriaClicked('Fishing')">Fishing</a></li>
+            <li><a href="#" (click)="criteriaClicked('Tours')">Tours</a></li>
+            <li><a href="#" (click)="criteriaClicked('')">All</a></li>
+            <li class="anc-bor"><a href="#" (click)="criteriaClicked('Weather')">Weather</a></li>
+          </ul>
+        </div>
         <div class="village">
           <h3>Righteous indignation &amp; like</h3>
           <span class="line"></span>
@@ -46,14 +46,14 @@
             </div>
           </div>
         </div>
-		</div>
-	   </div>
-		<div class="element-right">
-      <app-temperature-widget [airTemp]="currentAirTemp" [waterTemp]="currentWaterTemp"></app-temperature-widget>
-      <app-social-widget [followers]="currentFollowers" [following]="currentFollowing"></app-social-widget>
-		</div>
-	  <div class="clear"> </div>
+     </div>
+</div>
+  <div class="element-right">
+      <app-temperature-widget *ngIf="currentActivity" [airTemp]="currentActivity.weather.airTemp : '---'" [waterTemp]="currentWaterTemp"></app-temperature-widget>
+      <app-social-widget *ngIf="currentActivity" [followers]="currentFollowers" [following]="currentFollowing"></app-social-widget>
+    </div>
+    <div class="clear"> </div>
 </div>
 <div class="copy-right">
-			<p>© 2015 Hot Weather Widget. All rights reserved | Design by  <a href="http://w3layouts.com/" target="_blank">  W3layouts </a></p>
+      <p>© 2015 Hot Weather Widget. All rights reserved | Design by  <a href="http://w3layouts.com/" target="_blank">  W3layouts </a></p>
 </div>
