--- a/src/app/temperature-widget/temperature-widget.component.html
+++ b/src/app/temperature-widget/temperature-widget.component.html
@@ -1,7 +1,7 @@
 			<div class="temperatur">
-				<h5>Et harum quidem</h5>
+				<h5>Погода</h5>
 				<span class="w-line"> </span>
 				<span class="cloud"> </span>
-        <h2>{{weather ? weather.airTemp : '--'}}<sup class="degree">°</sup></h2>
-        <h6>Water {{weather? weather.waterTemp : '--'}}<sup class="degree">°</sup></h6>
+        <h2>{{weather ? weather.airTemp : '...'}}<sup class="degree">°</sup></h2>
+        <h6>Water {{weather? weather.waterTemp : '...'}}<sup class="degree">°</sup></h6>
 			</div>
