--- a/src/app/activities-widget/activities-widget.component.html
+++ b/src/app/activities-widget/activities-widget.component.html
@@ -1,4 +1,4 @@
-        <div class="element-bg-img"><img src="images/1.jpg" alt="" class="img-responsive"> </div>
+<div class="element-bg-img"><img src="images/{{currentActivity? currentActivity.image : '1.jpg'}}" alt="" class="img-responsive"> </div>
         <div class="element-left-bottom">
           <div class="ele-strip">
             <ul>
