--- a/src/app/activities-widget/activities-widget.component.html
+++ b/src/app/activities-widget/activities-widget.component.html
@@ -13,7 +13,7 @@
             <div class="activity_box">
               <div class="scrollbar" id="style-2">
                 
-                <div *ngIf="activitiesList$ | async as activitiesList">
+                <div *ngIf="activitiesList$ | async as activitiesList; else loadingSpinner">
                   <div (click)="hotelClick(a)" class="activity-row" *ngFor="let a of activitiesList | activityFilter:filterCriteria">
                     <div class="activity-desc">
                       <h5>Адрес места</h5>
@@ -34,6 +34,7 @@
                     <div class="clear"></div>
                   </div>
                 </div>
+                <ng-template #loadingSpinner>Loading...</ng-template>
               </div>
             </div>
           </div>
