Использую сокращенный синтаксис: вместо [weather]="currentActivity? currentActivity.weather : null" можно написать [weather]="currentActivity?.weather"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,10 @@
   </div>
   <div class="element-right">
       <!-- todo: спросить, как это правильно делать, чтобы два раза не писать тернарный оператор - здесь и в шаблоне -->
-      <app-temperature-widget [weather]="currentActivity? currentActivity.weather : null"></app-temperature-widget>
-      <app-social-widget [socialInfo]="currentActivity? currentActivity.socialInfo : null"></app-social-widget>
-    </div>
-    <div class="clear"> </div>
+      <app-temperature-widget [weather]="currentActivity?.weather"></app-temperature-widget>
+      <app-social-widget [socialInfo]="currentActivity?.socialInfo"></app-social-widget>
+  </div>
+  <div class="clear"> </div>
 </div>
 <div class="copy-right">
       <p>© 2015 Hot Weather Widget. All rights reserved | Design by  <a href="http://w3layouts.com/" target="_blank">  W3layouts </a></p>
