В текущем состоянии нормально выбирается первый отель при клике на критерии, но не работает первоначальная выбор первого отеля после первоначальной загрузки данных.

--- a/src/app/activities-widget/activities-widget.component.html
+++ b/src/app/activities-widget/activities-widget.component.html
@@ -1,4 +1,4 @@
-<div class="element-bg-img"><img src="images/{{currentActivity? currentActivity.image : '1.jpg'}}" alt="" class="img-responsive"> </div>
+<div class="element-bg-img"><img src="images/{{currentWidgetActivity? currentWidgetActivity.image : '1.jpg'}}" alt="" class="img-responsive"> </div>
         <div class="element-left-bottom">
           <div class="ele-strip">
             <ul>
@@ -14,8 +14,13 @@
               <div class="scrollbar" id="style-2">
                 
                 <div *ngIf="activitiesList$ | async as activitiesList; else loadingSpinner">
-                  <div (click)="hotelClick(a)" class="activity-row" *ngFor="let a of activitiesList | activityFilter:filterCriteria; trackBy: trackByFnActivities; first as isFirst; last as isLast">
+                  <div (click)="hotelClick(a)" class="activity-row" *ngFor="let a of activitiesList | activityFilter:filterCriteria; first as isFirst; last as isLast"
+                                               [ngClass]="isFirst? 'first_hotel' : ''"
+                                               >
+                    <!--  // this does not work properly also -->
+                    <!--
                     {{ isFirst ? hotelClick(a) : null }}
+                    -->
                     <!--
                     {{ isLast ? lastElementRendered() : null }}
                     -->
