Сделал абы как, что виджет работает (выбирается первый отель после начальной загрузки, выбирается первый отель после клика на категорию, правильно работают клики на отели, данные в тупые виджеты погоды и соцсетей передаются после первого клика). Но ощущение, что сделал как-то не angular-way, потому что не нашел способ, где навеситься на событие, когда отрабатывает пайп async

--- a/src/app/activities-widget/activities-widget.component.html
+++ b/src/app/activities-widget/activities-widget.component.html
@@ -24,6 +24,8 @@
                     <!--
                     {{ isLast ? lastElementRendered() : null }}
                     -->
+                    <!-- this works properly with the help of _initialized private field -->
+                    {{ isLast ? lastElementRendered() : null }}
                     <div class="activity-desc">
                       <h5>Адрес места</h5>
                       <p>{{a.address.address1}}</p>
