Сделано пропускание номера телефона через "форматирующий" phonePipe (сейчас просто обрамляет в звездочки, как заглушка)

--- a/src/app/activities-widget/activities-widget.component.html
+++ b/src/app/activities-widget/activities-widget.component.html
@@ -30,7 +30,7 @@
                       <h5>Адрес места</h5>
                       <p>{{a.address.address1}}</p>
                       <p>{{a.address.address2}}</p>
-                      <h6>{{a.phone}}</h6>
+                      <h6>{{a.address.phone | phonePipe}}</h6>
                     </div>
                     <div class="activity-img">
                       <ul>
