Практика с Observable: добавил таймер

--- a/src/app/activities-widget/activities-widget.component.html
+++ b/src/app/activities-widget/activities-widget.component.html
@@ -1,3 +1,4 @@
+<div class="village">{{timerMsg}}</div>
 <div class="element-bg-img"><img src="images/{{currentWidgetActivity? currentWidgetActivity.image : '1.jpg'}}" alt="" class="img-responsive"> </div>
         <div class="element-left-bottom">
           <div class="ele-strip">
