Отладочное: навешен обработчик (input)="onInput($event)" и связан с полем в классе

--- a/src/app/livesearch-widget/livesearch-widget.component.html
+++ b/src/app/livesearch-widget/livesearch-widget.component.html
@@ -1,3 +1,7 @@
 <p>
-  livesearch-widget works!
+  <input id="inpSearch" (input)="onInput($event)" />
 </p>
+
+
+<div id="divdbgMsg">{{dbgMsg}}</div>
+<div id="divResults">{{results}}</div>
