--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>Hot Weather Widget</h1>
+<h1><app-livesearch-widget></app-livesearch-widget></h1>
 <div class="element">
   <div class="element-left">
     <app-activities-widget (clickEE)="hotelClicked($event)"></app-activities-widget>
