Промежуточное: вместо навешивания через (input) реагируем на ввод в поле inpSearch с помощью создания Observable через fromEvent(inpSearch, 'input')

--- a/src/app/livesearch-widget/livesearch-widget.component.html
+++ b/src/app/livesearch-widget/livesearch-widget.component.html
@@ -1,5 +1,6 @@
 <p>
-  <input id="inpSearch" (input)="onInput($event)" />
+  <!-- (input)="onInput($event) -->
+  <input id="inpSearch"  />
 </p>
 
 
