--- a/src/app/livesearch-widget/livesearch-widget.component.html
+++ b/src/app/livesearch-widget/livesearch-widget.component.html
@@ -4,5 +4,5 @@
 </p>
 
 
-<div id="divdbgMsg">{{dbgMsg}}</div>
-<div id="divResults">{{results | json}}</div>
+<div id="divdbgMsg">{{results | json}}</div>
+<div id="divResults"></div>
