--- a/src/app/livesearch-widget/livesearch-widget.component.html
+++ b/src/app/livesearch-widget/livesearch-widget.component.html
@@ -5,4 +5,10 @@
 
 
 <div id="divdbgMsg">{{results | json}}</div>
-<div id="divResults"></div>
+<div id="divResults">
+  <ul>
+    <li *ngFor="let p of results">
+      {{p.author}}
+    </li>
+  </ul>
+</div>
