--- a/src/app/livesearch-widget/livesearch-widget.component.html
+++ b/src/app/livesearch-widget/livesearch-widget.component.html
@@ -7,8 +7,8 @@
 <div id="divdbgMsg">{{results | json}}</div>
 <div id="divResults">
   <ul>
-    <li *ngFor="let p of results">
-      {{p.author}}
+    <li *ngFor="let p of results; let i=index">
+      <span *ngIf="i<=10">{{p.author}}</span>
     </li>
   </ul>
 </div>
